Bug 126005 - Can't sort bookmarks list
Summary: Can't sort bookmarks list
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Bookmarks
  Show dependency treegraph
 
Reported: 2019-06-19 13:47 UTC by Xisco Faulí
Modified: 2021-06-28 14:40 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
sample (8.18 KB, application/vnd.oasis.opendocument.text)
2019-06-19 13:47 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-06-19 13:47:29 UTC
Created attachment 152290 [details]
sample

Steps to reproduce:
1. Open attached document
2. Go to insert - Bookmark
3. Try to sort it

-> Nothing happens

Reproduced in

Version: 6.4.0.0.alpha0+
Build ID: af37bb23f63b209af1193e20177c3aacbd777543
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-06-19 13:49:09 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2019-03-14 12:51:31 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2019-03-15 09:57:43 +0100
commit 8bddb3c77048814b370351e0eb72c31f289fb34f (patch)
tree 8b081c15b1779301eee613e6f24de1371dd77265
parent f5efc3cb9d2bbcaaca95e15a03815e8f8eda7b09 (diff)
add drop target support to welded widget

Bisected with: bibisect-linux64-6.3

Adding Cc: to Caolán McNamara
Comment 2 Xisco Faulí 2019-06-19 13:50:25 UTC
*** Bug 123514 has been marked as a duplicate of this bug. ***
Comment 3 Commit Notification 2019-06-21 07:56:21 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/46cd78756f784ce81f8051e211d542f53112d5a3%5E%21

Resolves: tdf#126005 make bookmark treeview sortable

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2019-06-21 08:58:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/b6ca3a24f78f1deca2ad6d01d667f6a8db5a498c%5E%21

Resolves: tdf#126005 make bookmark treeview sortable

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2019-06-25 15:21:40 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: 52800731baf9fcb88e54d60de5585640c8f97f7b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 6 Adalbert Hanßen 2019-06-26 08:35:45 UTC Comment hidden (obsolete)
Comment 7 Adalbert Hanßen 2019-06-26 08:40:11 UTC Comment hidden (obsolete)
Comment 8 Adalbert Hanßen 2021-06-28 10:09:46 UTC Comment hidden (obsolete)
Comment 9 Dieter 2021-06-28 14:38:38 UTC Comment hidden (obsolete)
Comment 10 Dieter 2021-06-28 14:40:57 UTC
See bug 123514 for problems that seem to remain.