sw/source/uibase/inc/bookmark.hxx
@@ -32,7 +32,7 @@ class SfxRequest;
 class BookmarkTable
 {
     std::unique_ptr<weld::TreeView> m_xControl;
-    int                 GetRowByBookmarkName(const OUString& sName);
+    std::unique_ptr<weld::TreeIter> GetRowByBookmarkName(const OUString& sName);
 public:
     BookmarkTable(std::unique_ptr<weld::TreeView> xControl);
     void                InsertBookmark(sw::mark::IMark* pMark);
@@ -42,16 +42,23 @@ public:
 
     void                unselect_all() { m_xControl->unselect_all(); }
     bool                has_focus() const { return m_xControl->has_focus(); }
-    int                 n_children() const { return m_xControl->n_children(); }
-    int                 get_selected_index() const { return m_xControl->get_selected_index(); }
-    std::vector<int> get_selected_rows() const { return m_xControl->get_selected_rows(); }
+    std::unique_ptr<weld::TreeIter> get_selected() const;
     void                clear() { m_xControl->clear(); }
-    void                remove(int nRow) { m_xControl->remove(nRow); }
-    void                select(int nRow) { m_xControl->select(nRow); }
-    OUString            get_id(int nRow) const { return m_xControl->get_id(nRow); }
+    void                remove(const weld::TreeIter& rIter) { m_xControl->remove(rIter); }
+    void                select(const weld::TreeIter& rIter) { m_xControl->select(rIter); }
+    void                remove_selection() { m_xControl->remove_selection(); }
+    OUString            get_id(const weld::TreeIter& rIter) const { return m_xControl->get_id(rIter); }
+    void set_sort_indicator(TriState eState, int nColumn = -1) { m_xControl->set_sort_indicator(eState, nColumn); }
+    void selected_foreach(const std::function<bool(weld::TreeIter&)>& func) { m_xControl->selected_foreach(func); }
 
     void connect_changed(const Link<weld::TreeView&, void>& rLink) { m_xControl->connect_changed(rLink); }
     void connect_row_activated(const Link<weld::TreeView&, void>& rLink) { m_xControl->connect_row_activated(rLink); }
+    void connect_column_clicked(const Link<int, void>& rLink) { m_xControl->connect_column_clicked(rLink); }
+    void make_sorted() { m_xControl->make_sorted(); }
+    bool get_sort_order() const { return m_xControl->get_sort_order(); }
+    void set_sort_order(bool bAscending) { m_xControl->set_sort_order(bAscending); }
+    int get_sort_column() const { return m_xControl->get_sort_column(); }
+    void set_sort_column(int nColumn) { m_xControl->set_sort_column(nColumn); }
 
     static const OUString aForbiddenChars;
     static const char     cSeparator;
@@ -64,6 +71,7 @@ class SwInsertBookmarkDlg : public SfxDialogController
     SfxRequest&                         rReq;
     std::vector<std::pair<sw::mark::IMark*, OUString>> aTableBookmarks;
     sal_Int32                           m_nLastBookmarksCount;
+    bool                                m_bSorted;
 
     std::unique_ptr<weld::Entry> m_xEditBox;
     std::unique_ptr<weld::Button> m_xInsertBtn;
@@ -82,6 +90,7 @@ class SwInsertBookmarkDlg : public SfxDialogController
     DECL_LINK(GotoHdl, weld::Button&, void);
     DECL_LINK(SelectionChangedHdl, weld::TreeView&, void);
     DECL_LINK(DoubleClickHdl, weld::TreeView&, void);
+    DECL_LINK(HeaderBarClick, int, void);
     DECL_LINK(ChangeHideHdl, weld::ToggleButton&, void);
 
     // Fill table with bookmarks
